# RustBot-old

./: .gitignore  Cargo.toml  README.md
src/: config.rs  error.rs  logging.rs  main.rs  typemap_kv.rs  uptimer.rs
src/commands/: cmd_help.rs  cmd_ping.rs  cmd_uptime.rs  meta.rs  mod.rs  moderation.rs
src/events/: mod.rs  on_guild_member_add.rs
