[package]
name = "rust_bot"
version = "0.1.0"
authors = [
    "Ivan Dardi <ivy.dardi at gmail.com",
    "acdenisSK <acdenissk69@gmail.com>"
]

[dependencies.serenity]
version = "0.2"
features = ["cache"]

[dependencies]
serde = "1.0.8"
serde_derive = "1.0.8"
error-chain = "0.8.1"
log = "0.3.6"
toml = "0.4.1"
time = "0.1.37"
typemap = "0.3.3"
num-integer = "0.1.32"